# ReProSeg

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: checks.yml  ci.yml
config/hydra/: config.yaml  debug.yaml  visualize.yaml
config/hydra/data/: cityscapes.yaml  pascal_voc.yaml
config/hydra/model/: default.yaml
config/hydra/training/: default.yaml  fast.yaml
config/hydra/visualization/: default.yaml
config/nni/: nni_config.yaml  search_space.json
src/config/: __init__.py
src/config/nni/: nni_config.yaml  search_space.json
src/config/schema/: __init__.py  base.py  data.py  environment.py  evaluation.py  logging.py  main.py  model.py  (+2 more)
src/data/: __init__.py  augment.py  config.py  count_class_distribution.py  data_split.py  dataloader.py  dataloaders.py  dataset.py  split_utils.py  transforms.py
src/model/: __init__.py  model.py  optimizers.py  receptive_field.py  segmentation_model.py  utils.py
src/proto_segmentation/: deeplab_v2_features.py  model.py
src/scripts/: protoseg_consistency.py  run.py  run_trainer.py  start_nni_trial.sh  start_slurm_job.sh
src/train/: eval.py  loss.py  test_step.py  train_step.py  trainer.py
src/utils/: args.py  config.yaml  func.py  log.py  nni_config.yaml  search_space.json
src/visualize/: __init__.py  interpretability.py  interpretability_protopnet.py  utils.py  visualize_prototypes.py  visualizer.py
test/: conftest.py
test/data/: conftest.py
test/model/: test_classifier_layer.py  test_deeplab_v3_features.py
test/visualize/: test_interpretability.py
(+44 files in other folders)
