[project]
name = "reproseg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "hydra-core>=1.3",
    "numpy~=2.2.6",
    "pillow~=11.2.1",
    "tensorboard>=2.19.0",
    "torch~=2.7",
    "torchvision~=0.22.1",
    "tqdm~=4.67.1",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["torchvision.*", "tqdm.*"]
ignore_missing_imports = true
